--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 MONGODB_URI = "mongodb+srv://panther:wolf4507@cluster0.ejxcikm.mongodb.net"
-CLOUDINARY_API_KEY = "582254134371861"
+ClOUDINARY_API_KEY = "582254134371861"
 CLOUDINARY_SECRET_KEY = "2zwMUohyOgVmylPpb_srCnlDxyM"
 CLOUDINARY_NAME = "dswp7yceu"
+JWT_SECRET = "wolf"
