--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-MONGODB_URI = "mongodb+srv://panther:wolf4507@cluster0.ejxcikm.mongodb.net"
-ClOUDINARY_API_KEY = "582254134371861"
-CLOUDINARY_SECRET_KEY = "2zwMUohyOgVmylPpb_srCnlDxyM"
-CLOUDINARY_NAME = "dswp7yceu"
-JWT_SECRET = "wolf"
+MONGODB_URI=mongodb+srv://panther:wolf4507@cluster0.ejxcikm.mongodb.net
+CLOUDINARY_API_KEY=918582744261624
+CLOUDINARY_SECRET_KEY=3wfZK3V6ObV8PXJV7gjL6tOFGAk
+CLOUDINARY_NAME=dswp7yceu
+JWT_SECRET=wolf@secretkey
